--- a/recycling_stations_zurich.ipynb
+++ b/recycling_stations_zurich.ipynb
@@ -357,7 +357,7 @@
    "source": [
     "# Find distance between all 'sammelstellen' and each address for which it belongs to the USE_N_NEAREST nearest 'sammelstellen'\n",
     "\n",
-    "API_KEY = 'AIzaSyCNofhvN_W4alj5vlJEcGZhYojhKoOSgMc'\n",
+    "API_KEY = *add api key here*\n",
     "BATCH_SIZE = 25\n",
     "\n",
     "durations = np.empty([koord_adressen_wgs84.shape[0],USE_N_NEAREST,len(RECYCLINGGÜTER)],dtype='int')\n",
