--- a/recycling_stations_zurich.ipynb
+++ b/recycling_stations_zurich.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Referenzen:\n",
+    "References:\n",
     "\n",
     "- Datensatz 'Standorte der Wertstoffsammelstellen (Glas, Kleinmetall, Altöl und Textilien) in der Stadt Zürich' der Stadt Zürich, https://www.stadt-zuerich.ch/geodaten/download/Sammelstelle\n",
     "\n",
